# yeetflow

./: README.md  package.json  pnpm-lock.yaml
apps/worker/: .env.example  .gitignore  MIGRATIONS.md  alembic.ini  package.json  pyproject.toml
apps/worker/alembic/: env.py  script.py.mako
apps/worker/alembic/versions/: 02c49f2fa2ea_initial_schema.py  0f0c72d0b94f_initial_schema.py  22bdbce9dc18_add_config_column_to_flow_table.py  37d784dcf2da_initial_schema.py  427444eb5d2c_event_status_update.py  685f547cd036_initial_schema.py  b9f712cd6fa9_initial_schema_creation_with_sqlmodel.py  c86fdf272815_run_status.py
apps/worker/app/: config.py  constants.py  db.py  main.py  migrations_cli.py  models.py  sockets.py
apps/worker/app/automation/: __init__.py  executor.py
apps/worker/app/automation/agents/: __init__.py  base.py  browser_use_agent.py  noop.py
apps/worker/app/bootstrap/: e2e_data.py
apps/worker/app/dependencies/: __init__.py  run_scheduler.py
apps/worker/app/flows/: __init__.py
apps/worker/app/flows/sample-flow/: manifest.yaml
apps/worker/app/middleware/: __init__.py  auth.py
apps/worker/app/routers/: __init__.py  artifacts.py  auth.py  flows.py  runs.py
apps/worker/app/runtime/: ARCHITECTURE.md  __init__.py  context.py  events.py  executor.py  registry.py  runner.py  scheduler.py  steel.py
apps/worker/app/runtime/actions/: __init__.py  base.py  builtin_actions.py  registry.py
apps/worker/app/runtime/adapters/: __init__.py  agent_factory.py  steel.py
apps/worker/app/runtime/agents/: __init__.py  base.py  noop.py
apps/worker/app/runtime/core/: __init__.py  checkpoint.py  coordinator.py  ports.py  state.py  steps.py
apps/worker/app/runtime/engine/: __init__.py  events.py  executor.py  flow_engine.py  middleware.py
apps/worker/app/runtime/flows/: __init__.py  registry.py  sync.py
apps/worker/app/services/: flow_service.py  run_service.py  steel_service.py
apps/worker/app/services/artifact/: __init__.py  errors.py  factory.py  local_storage.py  repository.py  service.py  (+1 more)
apps/worker/app/utils/: _passlib_context.py  auth.py  filename.py  retry.py  run.py
apps/worker/tests/: conftest.py
apps/worker/tests/contract/: test_auth_api.py  test_flows_get.py  test_flows_get_by_id.py  test_runs_artifact_get.py  test_runs_continue_post.py  test_runs_get.py  test_runs_post.py
apps/worker/tests/integration/: conftest.py  test_completion_artifact.py  test_flow_execution.py  test_hitl_pause_resume.py  test_runs_list_sessions_events.py  test_start_flow.py
apps/worker/tests/unit/: conftest.py  test_auth_middleware.py  test_auth_service.py  test_jwt_utils.py
(+165 files in other folders)
