[project]
name = "yeetflow-worker"
version = "0.1.0"
description = "YeetFlow Python worker service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.35.0",
    "pydantic>=2.11.9",
    "python-socketio>=5.13.0",
    "browser-use>=0.7.7",
    "httpx>=0.28.1",
    "python-multipart>=0.0.20",
    "python-dotenv>=1.1.1",
    "sqlmodel>=0.0.25",
    "aiosqlite>=0.21.0",
    "greenlet>=3.2.4",
    "pydantic-settings>=2.10.1",
    "alembic>=1.16.5",
]

[tool.uv]
dev-dependencies = ["pytest>=8.4.2", "ruff>=0.8.0"]

[tool.ruff]
line-length = 88
exclude = ["__pycache__/", ".venv/", "**/alembic/versions/**"]
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "C90",
    "I",
    "N",
    "UP",
    "YTT",
    "S",
    "BLE",
    "FBT",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "T10",
    "DJ",
    "EM",
    "EXE",
    "FA",
    "ISC",
    "ICN",
    "G",
    "INP",
    "PIE",
    "T20",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SLOT",
    "SIM",
    "TID",
    "INT",
    "ARG",
    "PTH",
    "ERA",
    "PD",
    "PGH",
    "PL",
    "TRY",
    "FLY",
    "NPY",
    "AIR",
    "PERF",
    "FURB",
    "LOG",
    "RUF",
]
ignore = ["COM812"]

[tool.ruff.lint.per-file-ignores]
# Allow assert statements in test files
"tests/**/*.py" = ["S101"]
# Allow HTTPException raises in try blocks for router error handling
"app/routers/*.py" = ["TRY301"]
# Allow random.random() for retry jitter
"app/utils/retry.py" = ["S311"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
db-upgrade = "app.migrations_cli:upgrade_main"
db-downgrade = "app.migrations_cli:downgrade_main"
db-current = "app.migrations_cli:current_main"
db-history = "app.migrations_cli:history_main"
db-revision = "app.migrations_cli:revision_main"
